# redis-rag-workbench

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  config-copy.yaml  docker-compose.yml  main.py  pyproject.toml
demos/: chat_with_pdf.py  demo1.py  demo2.py  demo3.py  demo4.py
demos/assets/: __init__.py  redis-theme.css  redis-theme.json
demos/chat_with_pdf/: chat_app.py  chat_with_pdf.py
demos/workbench/: chat_app.py  router.yaml  workbench.py
docker/: Dockerfile  compose.yml
shared_components/: cached_llm.py  converters.py  llm_utils.py  logger.py  pdf_manager.py  pdf_utils.py  theme_management.py
workbench/: app.py  chat_app.py  router.yaml
workbench/assets/: redis-theme.css  redis-theme.json
workbench/shared/: cached_llm.py  llm_utils.py  logger.py  pdf_manager.py  pdf_utils.py  theme_management.py
