[tool.poetry]
name = "redis-rag-workbench"
version = "0.1.0"
description = "Redis RAG Workbench - A RAG/Redis Playground"
authors = ["Brian Sam-Bodden <bsb@redis.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.44.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
openai = "^1.34.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.5"
tiktoken = "^0.7.0"
pypdf = "^4.2.0"
pymupdf = "^1.24.5"
PyYAML = "^6.0.1"
redis = "^5.0.6"
langchain-community = "^0.2.5"
langchain-huggingface = "^0.0.3"
langchain-openai = "^0.1.8"
redisvl = "^0.3.0"
cohere = "^5.5.8"
ragas = "^0.1.20"
langchain-redis = "^0.0.4"
langchain-experimental = "^0.0.62"
gradio-modal = "^0.0.3"
python-ulid = "^2.7.0"
pandas = "^2.1.3"
gradio-pdf = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
