[tool.poetry]
name = "redis-rag-workbench"
version = "0.1.0"
description = "Redis RAG Workbench - A RAG/Redis Playground"
authors = ["Brian Sam-Bodden <bsb@redis.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gradio = "^5.15.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
openai = "^1.61.1"
python-dotenv = "^1.0.1"
langchain = "^0.3.18"
tiktoken = "^0.8.0"
pypdf = "^5.3.0"
pymupdf = "^1.25.3"
PyYAML = "^6.0.1"
redis = "^5.2.1"
langchain-community = "^0.3.17"
langchain-huggingface = "^0.1.2"
langchain-openai = "^0.3.4"
redisvl = "^0.3.9"
cohere = "^5.13.12"
ragas = "^0.2.13"
langchain-redis = "^0.1.2"
langchain-experimental = "^0.3.4"
gradio-modal = "^0.0.4"
python-ulid = "^2.7.0"
pandas = "2.2.3"
gradio-pdf = "^0.0.22"
langchain-google-vertexai = "^2.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
