[project]
name = "redis-rag-workbench"
version = "0.2.0"
description = "Redis RAG workbench — a RAG/Redis playground"
authors = [
  { name = "Brian Sam-Bodden", email = "bsb@redis.com" }
]
readme = "README.md"
requires-python=">=3.11,<3.14"
keywords = ["python", "fastapi", "redis", "langchain", "openai", "vertexai", "gemini", "azure"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python"
]
dependencies = [
    "gradio>=5.16.0",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn>=0.34.0",
    "openai>=1.63.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.19",
    "tiktoken>=0.9.0",
    "pypdf>=5.3.0",
    "pymupdf>=1.25.0",
    "PyYAML>=6.0.0",
    "redis>=5.2.1",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.6",
    "cohere>=5.13.12",
    "ragas==0.2.6",
    "langchain-experimental>=0.3.4",
    "gradio-modal>=0.0.4",
    "python-ulid>=2.7.0",
    "pandas==2.2.3",
    "gradio-pdf>=0.0.22",
    "langchain-google-vertexai>=2.0.13",
    "hf-xet>=1.1.8",
    "redisvl>=0.8.2",
    "sentence-transformers>=5.1.0",
    "langchain-redis>=0.2.3",
]
package-mode = false

[project.urls]
Repository = "https://github.com/redis-developer/redis-rag-workbench.git"
"Bug Tracker" = "https://github.com/redis-developer/redis-rag-workbench/issues"

[project.optional-dependencies]
dev = [
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
